--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,17 +11,21 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  http: ^0.13.5
+  http: ^0.13.6
   google_mlkit_face_detection: ^0.13.0
   google_mlkit_commons: ^0.11.0
   google_mlkit_translation: ^0.13.0
   camera: ^0.11.1
-  permission_handler:
-  awesome_notifications:
+  permission_handler: ^11.3.0
+  awesome_notifications: ^0.10.1
   shared_preferences: ^2.2.0
   provider: ^6.0.5
   audioplayers: ^6.4.0
   cupertino_icons: ^1.0.8
+  flutter_tts: ^4.2.2
+  intl: ^0.20.2  # ✅ mis à jour pour être compatible
+
+
 
 dev_dependencies:
   flutter_test:
