--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,37 +1,47 @@
 name: mini_projet
 description: "Application de quiz multilingue avec authentification faciale"
-
 publish_to: 'none'
 
 version: 1.0.0+1
 
 environment:
-  sdk: '>=3.0.0 <4.0.0'
+  sdk: ">=2.17.0 <3.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
-  http: ^0.13.5
-  google_mlkit_face_detection: ^0.13.0
-  google_mlkit_commons: ^0.11.0
-  google_mlkit_translation: ^0.13.0
-  camera: ^0.11.1
-  permission_handler:
-  awesome_notifications:
-  shared_preferences: ^2.2.0
+  http: ^1.4.0
+  google_mlkit_face_detection:
+  google_mlkit_commons:
+  google_mlkit_translation:
+  camera: ^0.10.5+9
+  permission_handler: ^11.3.0
+  flutter_local_notifications: ^16.3.0
+  shared_preferences: ^2.2.2
   provider: ^6.0.5
   audioplayers: ^6.4.0
   cupertino_icons: ^1.0.8
+  tflite_flutter: ^0.10.0
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
+  path_provider: ^2.1.1
+  image: ^3.1.3
+  lottie: ^1.2.2
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^5.0.0
+  flutter_lints: ^1.0.0
+  build_runner: ^2.4.6
+  hive_generator: ^2.0.1
 
 flutter:
   uses-material-design: true
+
   assets:
     - assets/sounds/correct.wav
     - assets/sounds/wrong.wav
     - assets/sounds/warning.wav
     - assets/sounds/timeout.wav
+    - assets/mobilefacenet.tflite
+    - assets/loading.json
