--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,8 @@ dependencies:
   path_provider: ^2.1.1
   image: ^3.1.3
   lottie: ^1.2.2
+  firebase_core: ^2.25.4
+  firebase_messaging: ^14.7.10
 
 dev_dependencies:
   flutter_test:
